--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "yarn run eslint src --ignore-path .gitignore",
+    "lint:fix": "yarn run eslint src --fix"
   },
   "eslintConfig": {
     "extends": [
